# hello_c_study

./: .gitignore  CMakeLists.txt  README.md  hello_world.c
ask_GPT/: 01_6_21.md
v10_read_file/: a10_文件块读写.c  a11_文件读写结构体.c  a1_文件打开和关闭.c  a2_文件字符读写.c  a3_简单的加密解密.c  a4_文件行读写.c  a5_四则运算上.c  a6_四则运算下.c  a7_文件格式化读写.c  a8_大文件排序上.c  a9_大文件排序下.c
v11_demo/: a1_文件行数.c  dict.c  dict.h
v12_snake/: Snake.c  Snake.h
v2_data_type/: hello.c  v1_user_system.c  v2_var.c  v3_int.c  v4_int_input.c  v5_int_range.c  v6_char.c  v7_float.c  v8_num_overflow.c  v8_数值溢出.c
v3_exp/: v2_附加格式.c  v3_scanf.c  v4_exp.c  v5_assignment.c  v5_赋值运算符.c  v6_比较运算符.c  v7_bool.c  v8_type_change.c
v4_if_else/: v10_if_demo.c  v11_three_exp.c  v12_switch.c  v13_while.c  v14_do_while.c  v15_for.c  v16_nest.c  v17_jump.c  v9_if.c
v5_list_string/: d10_字符串比较.c  d11_字符串格式化.c  d12_字符串查找.c  d13_字符串分割.c  d14_字符串类型转换.c  d1_主函数的形象.c  d2_字符串出现次数.c  d6_非空格字符串个数.c  d7_字符串逆置.c  d8_字符串拷贝.c  d9_字符串追加.c  v1_list.c  v1_list_2.c  v2_list_swap.c  v3_list_pop.c  v4_list_2.c  v5_list_demo.c  v6_多维数组.c  v7_字符串数组.c  v8_字符串输出.c  v9_strLen.c
v6_function/: c1_main.c  c2_fun.c  c3_fun.h  c4_head.h  v1_use_system_func.c  v5_exit.c  v6_function_demo.c  v7_func_statement.c  v8_exit.c
v7_pointer/: a1_指针的定义和使用.c  b2_野指针和空指针.c  b3_万能指针.c  b4_const修饰的指针.c  b5_指针和字符串.c  c1_指针和数组.c  c2_指针运算.c  c3_指针数组.c  c4_多级指针.c  c5_指针作为函数参数.c  c6_数组名作为函数参数值.c  c7_指针作为函数返回值.c  c8_字符串查找字符串.c
v8_memory_manage/: a10_练习题.c  a11_内存处理函数.c  a12_内存常见问题.c  a1_局部变量.c  a2_test.c  a2_全局变量.c  a3_静态局部变量.c  a4_test.c  a4_静态全局变量.c  a5_未初始化数据.c  a6_test.c  (+4 more)
(+14 files in other folders)
